# Site-Connectivity-Checker

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
src/site_connectivity_checker/: __init__.py
src/site_connectivity_checker/adapters/request_performer/: __init__.py  exceptions.py
src/site_connectivity_checker/services/: __init__.py
src/site_connectivity_checker/services/checker/: __init__.py
src/site_connectivity_checker/services/checker/entities/: endpoint.py  exceptions.py  rule.py
src/site_connectivity_checker/services/checker/use_cases/: service_is_available.py
tests/: conftest.py  test_site_connectivity_checker.py
tests/adapters/request_performer/: test_perform_request.py
tests/services/checker/: conftest.py  test_perform_request_method.py
tests/services/checker/entities/: test_availability_rule.py  test_endpoint.py
tests/services/checker/use_cases/: test_service_is_available.py
