[tool.poetry]
name = "site_connectivity_checker"
version = "0.1.0"
description = ""
authors = ["Massimiliano Ceriani <massimilianoceriani08@gmail.com>"]


[tool.poetry.scripts]
start_service = "site_connectivity_checker.services:run_service"

[tool.poetry.dependencies]
python = "^3.7"
pytest-cov = "^2.9"
Click = "^7.1"
pydantic = "^1.5"
aiohttp = "^3.6"
pytest-asyncio = "^0.12.0"
pytime-converter = "^0.1.7"
coloredlogs = "^14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
codecov = "^2.1"
flake8 = "^3.8"
aioresponses = "^0.6.4"
pytest-mock = "^3.1"
asynctest = "^0.13.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
